Closed Bug 1926561 Opened 1 year ago Closed 1 year ago

Breakpad generates the wrong module name for labelled anonymous mappings that contain a '/' character

Categories

(Toolkit :: Crash Reporting, defect)

defect

Tracking

()

RESOLVED FIXED
134 Branch
Tracking Status
firefox134 --- fixed

People

(Reporter: gsvelto, Assigned: gsvelto)

References

Details

Attachments

(1 file)

Breakpad's minidump writer assumes that a line in /proc/PID/maps that contains a slash character represents a file mapping. Unfortunately named anonymous (!) regions may contain slashes, as there is no restriction on the characters which can be used in the label. This leads to issues such as bug 1926077 where we record a portion of an anonymous mapping label as the file name of a module.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8c97563356bd Fix Breakpad's detection of anonymous mappings r=afranchuk
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: