Bug 1926561 - Fix Breakpad's detection of anonymous mappings r=afranchuk

Differential Revision: https://phabricator.services.mozilla.com/D226630